--- a/lab12.ipynb
+++ b/lab12.ipynb
@@ -31,7 +31,7 @@
         "import requests\n",
         "\n",
         "# Fetch a web page\n",
-        "r = requests.get(\"https://en.wikipedia.org/wiki/Data\")\n",
+        "r = requests.get(\"https://en.wikipedia.org/wiki/Henry_Cavill")\n",
         "print(r.text)"
       ],
       "metadata": {
